fix: Java1.8用にコードを書き換え
Signed-off-by: ltzz <ltzz@users.noreply.github.com>